# agent-bus

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PRD.md  PROTOCOL.md  README.md  STATUS.md  agent-bus-0.1.0.tgz  eslint.config.js  package.json  pnpm-lock.yaml  tsconfig.json  tsup.config.ts  vitest.config.ts
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
clients/python/: README.md  pyproject.toml  requirements-dev.txt
clients/python/agentbus/: __init__.py
clients/python/tests/: conftest.py  test_conformance.py
demo/: README.md  agent-bus.tape
examples/shared-folder/: README.md  demo.sh  lead.sh  worker.sh
schemas/: README.md  index.json  message.input.schema.json  message.schema.json  task.schema.json
src/: index.ts  version.ts
src/cli/: cli.ts
src/core/: errors.ts  file-bus.ts  fsm.ts  ids.ts  lock.ts  schemas.ts  transport.ts  types.ts  validate.ts
src/http/: client.ts  server.ts
src/scripts/: bundle-schemas.ts  gen-schemas.ts
test/: cli.test.ts  concurrency.scale.sim.test.ts  concurrency.sim.test.ts  file-bus.test.ts  fsm.test.ts  http.test.ts  lock.test.ts  schema.test.ts  smoke.test.ts
test/conformance/: file.test.ts  http.test.ts  suite.ts
test/helpers/: sim-driver.ts  sim-support.ts  sim-worker.ts
